<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg_main"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_delete_head"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:text="@string/delete"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:text="@string/are_you_sure_you_want_clear_all_history"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@+id/tv_delete_head"
            app:layout_constraintStart_toStartOf="@+id/tv_delete_head"
            app:layout_constraintTop_toBottomOf="@+id/tv_delete_head" />

        <TextView
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/delete"
            android:textColor="#D64C4C"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView27"
            app:layout_constraintTop_toBottomOf="@+id/textView27" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/cancel"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn_delete"
            app:layout_constraintEnd_toStartOf="@+id/btn_delete"
            app:layout_constraintTop_toTopOf="@+id/btn_delete" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>